Fix suporters height on mobile view

--- a/src/components/Article/Status/styles.scss
+++ b/src/components/Article/Status/styles.scss
@@ -21,6 +21,6 @@
     background: #3f9ae3;
   }
   &--red {
-    background: red;
+    background: #eb5757;
   }
 }
